cmake_minimum_required(VERSION 3.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( abc ShiBie.cpp )
add_executable(putin show_img.cpp)
target_link_libraries( putin ${OpenCV_LIBS} )
target_link_libraries( abc ${OpenCV_LIBS} )
add_executable(gaosimohu gaosimohu.cpp)
target_link_libraries( gaosimohu ${OpenCV_LIBS} )
add_executable(pengzhang pengzhang.cpp)
target_link_libraries( pengzhang ${OpenCV_LIBS} )
add_executable(bbb aaa.cpp)
target_link_libraries( bbb ${OpenCV_LIBS} )
add_executable(www www.cpp)
target_link_libraries( www ${OpenCV_LIBS} )
add_executable(hu hu.cpp)
target_link_libraries( hu ${OpenCV_LIBS} )